# OOP

./: .gitmodules
BinaryTreeIterator/: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  main.cpp
BinaryTreeIterator/Googletest/: CMakeLists.txt
BinaryTreeIterator/Tests/: tests.cpp
CSVParser/: CMakeLists.txt  CSVParser.h  TupleUtils.h  main.cpp
GameOfLife/: CMakeLists.txt  Field.cpp  Field.h  Parser.cpp  Parser.h  Preset.h  README  Rule.cpp  Rule.h  main.cpp
SoundProcessor/: CMakeLists.txt  Mixer.cpp  Multiplier.cpp  Muter.cpp  Parser.cpp  SoundConverter.cpp  SoundConverter.h  Types.h  WavSink.cpp  main.cpp
